Revert "update grunt-html-validation output file ignores"
This reverts commit af75dca908d672d7cc71fcf009b5c0a5f10aad06.

--- a/.gitignore
+++ b/.gitignore
@@ -34,8 +34,7 @@ nbproject
 .komodotools
 
 # grunt-html-validation
-validation-status.json
-validation-report.json
+validation-staus.json
 
 # Folders to ignore
 .hg
